# gossip_observer

./: .dockerignore  .gitignore  .worktreeinclude  20260320000000_timings_compression_policy.sql  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  README.md  ansible.cfg  config.ini  db_build_indices.sh  exampledotenv.txt  export_db.sh  filter_localhost.sh  fly.toml  fly_config.ini  justfile  nats_server.conf  node_addresses.txt  node_addresses_clearnet.txt  node_addrs_clearnet.txt  split_node_addr_list.sh  sql_queries.sql  stage_binaries.sh  start.sh  taplo.toml
.cargo/: config.toml
.claude/rules/: analysis.md  ansible.md  database.md  gossip-semantics.md  rust.md
.sqlx/: query-07ce8754690265637b96d8ed32b20c76c2dded60bcbed7fca055b011e08a1d02.json  query-0bef0a102724bff459646d3865083c5811ea32f3b6a951cc888167c2cdfe2df0.json  query-2151c1fec530b57d4521cc7a0f4e502abb3f4467dc33f25e8c0e002d565dfec6.json  query-2c50ae86d2e3d6077696f60dc387ac25e3c07502f2c7ae3abac7d7c7245fd51c.json  query-4142145772ba903e590f69f20c814fddcbb9e1579c7850281544d037ec9f991f.json  query-47df49a338e926e1f91e1c7418a8b07a1ef7b046ffda22d717701a7bc82ed779.json  query-4f9ed43932412caf395a3c8419b3573b895dcf238601474b948865ceb96e4c92.json  query-5f24f3a4cd6d69e6a965bf0cf8335a667712e12c05ceac026b46318e5812b9d1.json  query-65b5e9939b13ef0556587e167d133ddcd5c042bf8ec8cbe92cbf552d04abf587.json  query-6a22bb5e806df2da8b665c05beeab633175086855cec87af6229c5fed1da9ac4.json  query-75cd65e73b602ca3c1cb632a8ebe536e00935c5e305c03861bc55959ec624431.json  query-8a35e80414749abfb35e10c73e262874662e2872dbda6e382872502335b79d26.json  query-967a8b1214c0217e71707e027dc069cd26b79d42c8aa84bcbc22cddae77e7082.json  query-a61a05ec036e1f1c246a9eff818a9ab47b47fd8add47dddfcfc8002294a62e49.json  query-aee82319978da6f11c583325e1f8a77477987549c196ea7f561f8fc47586352b.json  query-d9f16e43dfb4127b9f3314b359a85cb0bd9604f03befc04afae0474cd46f477d.json  query-e81e67b7bf83f6e60b400c8e9fd77bc13d180f69f0f710659631110b5bc17547.json  query-f37ebad8d40e71ff5348727260f3b44fd8d3525c2457b254596a4c6e49de3e5b.json  query-f853be33d0f061759c841bb2ff456a1dd757b92181f48471773ce63e35f474fb.json  query-fb83364dd6bf390cae0635fa7b127e75d18b649bdc1b848d5f7beb56df3412e2.json
analysis/: README.md  compact_traffic_export.py  parquet_queries.py  pyproject.toml  test_queries.py
diagrams/: seq_gossip_collect.puml  seq_gossip_message_flow.puml  seq_gossip_publish_archive.puml  seq_graph_upload_comparison.puml  seq_registration_heartbeat.puml  seq_registration_heartbeat_simple.puml  system_component.puml
electrum-cli/: Cargo.toml
electrum-cli/src/: main.rs
gossip_analyze/: Cargo.toml
gossip_analyze/src/: main.rs
gossip_analyze/tests/: serde_roundtrip.rs
gossip_archiver/: Cargo.toml  timescale_diagnosis_queries.sql
gossip_archiver/src/: chunk_archiver.rs  config.rs  lib.rs  main.rs  nats.rs  test_constants.rs
gossip_collector/: Cargo.toml  Dockerfile
gossip_collector/src/: config.rs  exporter.rs  grpc_server.rs  logger.rs  main.rs  node_manager.rs  peer_conn_manager.rs
gossip_dump/: node_list.csv
impl_fingerprint/: Cargo.toml  README.md  demo.sh
impl_fingerprint/src/: classifier.rs  db.rs  input.rs  lib.rs  main.rs  validate.rs
impl_fingerprint/src/scraper/: cln.rs  eclair.rs  ldk.rs  lnd.rs  mod.rs
impl_fingerprint/tests/: classifier.rs  db_roundtrip.rs  input_loading.rs  scraper_cln.rs  scraper_eclair.rs  scraper_ldk.rs  scraper_lnd.rs  validate.rs
impl_fingerprint/tests/fixtures/: synthetic_channels.json  synthetic_nodes.json
infra/ansible/: DATA_SHARING.md  README.md  archiver_init.yml  baremetal_switch_networkd_resolved.txt  collector_deploy.yml  collector_init.yml  collector_restart.yml  collector_restart_changed.yml  config_nats.yml  controller_init.yml  data_sharing_init.yml  example_vault.yml  notes.txt  server_init.yml  tailscale_init.yml  timescaledb_init.yml
migrations/: 20251120211926_init.sql  20251204223330_add_msg_direction.sql  20251209154858_basic_indexes.sql  20260203183032_modify_timescale_settings.sql  20260207214136_drop_foreign_keys.sql  20260330215248_chunk_archive_log.down.sql  20260330215248_chunk_archive_log.sql  20260331152630_compress_caggs.sql  20260401000000_message_first_seen.down.sql  20260401000000_message_first_seen.sql  20260401000001_message_first_seen_jobs.down.sql  20260401000001_message_first_seen_jobs.sql  20260615000000_log_update_message_first_seen.down.sql  20260615000000_log_update_message_first_seen.sql  20260616000000_drop_indexes.sql  20260708000000_chunk_deletion_log.down.sql  20260708000000_chunk_deletion_log.sql
migrations_testing/: 20260209000000_continuous_aggregates.sql  20260210000000_outbound_origin_ca.sql  20260211000000_fix_continuous_aggregates.sql
observer_common/: Cargo.toml  build.rs
observer_common/proto/: collectorrpc.proto  common.proto  controllerrpc.proto
observer_common/src/: collector_client.rs  controller_client.rs  lib.rs  logging.rs  token_bucket.rs  types.rs  util.rs
observer_common/src/collectorrpc/: collectorrpc.rs
observer_common/tests/: proto_roundtrip.rs
observer_controller/: Cargo.toml
observer_controller/src/: collector_manager.rs  config.rs  csv_reader.rs  grpc_server.rs  json_writer.rs  lib.rs  main.rs
observer_proto/: Cargo.toml  build.rs
observer_proto/proto/: collector.proto
observer_proto/src/: lib.rs
query_results/: alias_lists.sh  channel_graph_analysis_graphtool.py  channel_graph_analysis_igraph.py  ln_data_utils.py  notes.md  plot_old_sql_query_results.py  prepare_gephi_layout.py  preprocess_fields.py  pyproject.toml
query_results/0926T033554/: connected_peers_over_time.csv  convergence_delay.csv  messages_by_type.csv  msg_rate_uniqueness_by_type.csv  msg_totals.csv  node_in_node_ann_frequency.csv  peers_per_message.csv  scid_frequency.csv  scid_summary.csv  total_msg_size.csv
query_results/0926T195046/: conv_delay.csv  (+9 more)
scripts/: db_build_indices.sh  dump_pgdb.sh  pull_sync_db.sh  refresh_continuous_aggregates.sh  restore_timescaledb.sh  stage_binaries.sh
src/: config.rs  main.rs
tor_proxy/: Cargo.toml
(+57 files in other folders)
