[workspace]
members = [
        "gossip_collector",
        "gossip_analyze",
        "gossip_archiver",
        "observer_common",
        "tor_proxy",
]
resolver = "3"

# Cargo patching has to be done at the workspace root, and patch directives
# in the Cargo.toml of a dependency are not applied when building the dependent.
# So to use our branch of ldk-node and rust-lightning, we apply these patch
# directives.
[patch.crates-io]
ldk-node                       = { git = "https://github.com/jharveyb/ldk-node", branch = "gossip_observer-0.2.0-rc1" }
lightning                      = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-0.2.0-rc1" }
lightning-background-processor = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-0.2.0-rc1" }
lightning-block-sync           = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-0.2.0-rc1" }
lightning-invoice              = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-0.2.0-rc1" }
lightning-liquidity            = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-0.2.0-rc1" }
lightning-macros               = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-0.2.0-rc1" }
lightning-net-tokio            = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-0.2.0-rc1" }
lightning-persister            = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-0.2.0-rc1" }
lightning-rapid-gossip-sync    = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-0.2.0-rc1" }
lightning-transaction-sync     = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-0.2.0-rc1" }
lightning-types                = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-0.2.0-rc1" }

[profile.dev.package.sqlx-macros]
opt-level = 3

# Apply the settings from the default release profile.
[profile.dev.package.ldk-node]
codegen-units    = 16
debug            = true
debug-assertions = false
incremental      = false
opt-level        = 3
overflow-checks  = false

[profile.dev.package.lightning]
codegen-units    = 16
debug            = true
debug-assertions = false
incremental      = false
opt-level        = 3
overflow-checks  = false

# Add oil
[profile.dev]
opt-level = 1

# Remove oil
[profile.release]
debug = true
