[workspace]
members = [
        "gossip_collector",
        "gossip_analyze",
        "gossip_archiver",
        "observer_common",
        "observer_controller",
        "electrum-cli",
]
resolver = "3"

# Cargo patching has to be done at the workspace root, and patch directives
# in the Cargo.toml of a dependency are not applied when building the dependent.
# So to use our branch of ldk-node and rust-lightning, we apply these patch
# directives.
[patch.crates-io]
ldk-node                       = { git = "https://github.com/jharveyb/ldk-node", branch = "gossip_observer-v0.7.0" }
lightning                      = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-v0.2" }
lightning-background-processor = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-v0.2" }
lightning-block-sync           = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-v0.2" }
lightning-invoice              = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-v0.2" }
lightning-liquidity            = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-v0.2" }
lightning-macros               = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-v0.2" }
lightning-net-tokio            = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-v0.2" }
lightning-persister            = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-v0.2" }
lightning-rapid-gossip-sync    = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-v0.2" }
lightning-transaction-sync     = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-v0.2" }
lightning-types                = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer-v0.2" }

[profile.dev.package.sqlx-macros]
opt-level = 3

# Apply the settings from the default release profile (except incremental).
[profile.dev.package.ldk-node]
codegen-units = 16
opt-level     = 1

[profile.dev.package.lightning]
codegen-units = 16
opt-level     = 1

[profile.dev.package.lightning-background-processor]
codegen-units = 16
opt-level     = 1

[profile.dev.package.lightning-block-sync]
codegen-units = 16
opt-level     = 1

[profile.dev.package.lightning-invoice]
codegen-units = 16
opt-level     = 1

[profile.dev.package.lightning-liquidity]
codegen-units = 16
opt-level     = 1

[profile.dev.package.lightning-macros]
codegen-units = 16
opt-level     = 1

[profile.dev.package.lightning-net-tokio]
codegen-units = 16
opt-level     = 1

[profile.dev.package.lightning-persister]
codegen-units = 16
opt-level     = 1

[profile.dev.package.lightning-rapid-gossip-sync]
codegen-units = 16
opt-level     = 1

[profile.dev.package.lightning-transaction-sync]
codegen-units = 16
opt-level     = 1

[profile.dev.package.lightning-types]
codegen-units = 16
opt-level     = 1
