[project]
name = "gossip-analysis"
version = "0.1.0"
description = "Lightning Network gossip data analysis notebook"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary",
    "python-dotenv",
    "polars[pandas,pyarrow]>=1.0",
    "altair>=5",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
    "duckdb>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
