[package]
name = "gossip_analyze"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1", features = ["derive"] }

ldk-node = { git = "https://github.com/jharveyb/ldk-node", branch = "gossip_observer_no_fwd" }

tokio = { version = "1.47.0", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.145"
