[package]
edition = "2024"
name    = "gossip_archiver"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-nats = "0.44.0"
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
] }
config = { version = "0.15.19", features = ["toml"] }
console-subscriber = "0.5.0"
dotenvy = "0.15.7"
tracing = "0.1"

async-duckdb = { version = "0.3.1", features = [
  "bundled",
  "parquet",
  "chrono",
  "uuid",
] }
# Use the 1.4.4 LTS version of duckdb for now; explicitly ping it for the workspace:
# `cargo update -p duckdb --precise 1.4.4`

futures = "0.3.31"
itertools = "0.14"
lightning = { version = "0.2", features = ["std"] }
observer_common = { path = "../observer_common" }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.0", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "macros",
  "derive",
] }
tokio = { version = "1.47", features = ["full", "tracing"] }
tokio-util = "0.7.18"
twox-hash = { version = "2.1.2", features = ["std", "xxhash3_64"] }
