[package]
name = "gossip_collector"
version = "0.1.0"
edition = "2024"

[dependencies]
flume = { version = "0.11", features = ["async"] }

actix-web = "4.11.0"
ldk-node = { git = "https://github.com/jharveyb/ldk-node", branch = "gossip_observer_no_fwd" }
tokio = { version = "1.47", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
configparser = "3.0"
anyhow = "1.0"
bitcoin = "0.32.4"
chrono = { version = "0.4", default-features = false, features = [
        "clock",
        "serde",
] }

log = { version = "0.4.22", default-features = false, features = ["std"] }

lightning = { git = "https://github.com/jharveyb/rust-lightning", branch = "gossip_observer_no_fwd", features = [
        "std",
] }
async-nats = "0.42.0"
console-subscriber = "0.4.1"
tokio-util = { version = "0.7.16", features = ["full", "rt"] }
