[package]
name = "gossip_collector"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = "4.11.0"
ldk-node = { version = "0.7" }
tokio = { version = "1.47", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
configparser = "3.0"
anyhow = "1.0"
bitcoin = "0.32.4"
chrono = { version = "0.4", default-features = false, features = [
        "clock",
        "serde",
] }

log = { version = "0.4.22", default-features = false, features = ["std"] }

lightning = { version = "0.2.0-rc1", features = ["std"] }
async-nats = "0.42.0"
console-subscriber = "0.5.0"
tokio-util = { version = "0.7.16", features = ["full", "rt"] }
rand = { version = "0.9.2", features = ["std"] }
itertools = "0.14.0"
