[package]
edition = "2024"
name    = "gossip_collector"
version = "0.1.0"

[dependencies]

anyhow = "1.0"
bitcoin = "0.32.4"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
] }
config = { version = "0.15.19", features = ["toml"] }
dotenvy = "0.15.7"
ldk-node = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", features = ["full", "tracing"] }

log     = { version = "0.4.22", default-features = false, features = ["std"] }
tracing = "0.1"

async-nats         = "0.44.0"
console-subscriber = { version = "0.5.0", features = ["parking_lot"] }
itertools          = "0.14.0"
lightning          = { version = "0.2", features = ["std"] }
rand               = { version = "0.9.2", features = ["std"] }
tokio-util         = { version = "0.7.16", features = ["full", "rt"] }

bip39           = { version = "2.2.2", features = ["zeroize"] }
observer_common = { path = "../observer_common" }
tonic           = "0.14"
croner = "3.0.1"
