[package]
edition = "2024"
name    = "impl_fingerprint"
version = "0.1.0"

[[bin]]
name = "impl_fingerprint"
path = "src/main.rs"

[dependencies]
anyhow    = "1.0"
clap      = { version = "4.0", features = ["derive"] }
hex       = "0.4"
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
tempfile   = "3"
