[package]
edition = "2024"
name    = "observer_common"
version = "0.1.0"

[dependencies]

anyhow           = "1.0"
bitcoin          = "0.32.4"
ldk-node         = { version = "0.7" }
lightning        = { version = "0.2", features = ["std"] }
prost            = "0.14"
serde            = { version = "1.0", features = ["derive"] }
serde_with       = { version = "3.16.1", features = ["json"] }
tokio            = { version = "1.47", features = ["full", "tracing"] }
tonic            = "0.14"
tonic-prost      = "0.14"
tonic-reflection = "0.14"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "local-time"] }
tracing-appender   = "0.2"
tracing-journald   = "0.3"
console-subscriber = { version = "0.5.0", features = ["parking_lot"] }

[build-dependencies]
tonic-prost-build = "0.14"
